examples/type_system/failing/177_module_missing_open_brace.flx
module Demo
let x = 1
let after = 1
